# gcwatchdog

./: .travis.yml  CMakeLists.txt  README.md
include/: gc.h  log.h  param.h  util.h  vm.h
src/: agent.cpp  gc.cpp  log.cpp  param.cpp  util_linux.cpp  util_macos.cpp  vm.cpp
test/: config_parse_test.cpp  logger_test.cpp  main.cpp
